# eldiff

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
references/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/renderer/: app.js  index.html  styles.css
