[package]
name = "eldiff"
version = "1.0.0"
description = "Lightweight macOS text diff app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.2"
